<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appstart.hkj.andscp.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_server_head_text"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_weight="0"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_name"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_weight="0"/>

    <EditText
        android:id="@+id/server_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="16"
        android:hint="@string/server_name"
        android:text="192.168.1.62"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:cursorVisible="true"
        android:layout_weight="0"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_username"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_weight="0"/>

    <EditText
        android:id="@+id/server_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="16"
        android:hint="@string/server_username"
        android:text="hkj"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:cursorVisible="true"
        android:layout_weight="0"
        android:inputType="text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_password"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:layout_weight="0"/>

    <EditText
        android:id="@+id/server_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="16"
        android:hint="@string/server_password"
        android:text="hukaijian"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:cursorVisible="true"
        android:layout_weight="0"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/add_server_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/add_server_button"
            android:background="@color/entrance_button_background"
            />

    </LinearLayout>
</LinearLayout>
